import { BigNumber } from "@payvo/sdk-helpers";
import { describe } from "@payvo/sdk-test";

import { identity } from "../test/fixtures/identity";
import { bootContainer } from "../test/mocking";
import { container } from "./container";
import { Identifiers } from "./container.models";
import { WalletData, WalletFlag } from "./wallet.enum";

describe("WalletSerialiser", ({ beforeAll, beforeEach, assert, loader, each, nock, stub }) => {
	const datasets = [
		[
			123,
			{
				available: Number.NaN,
				fees: Number.NaN,
				locked: BigNumber.make(3),
				lockedUnvotes: BigNumber.make(3),
				lockedVotes: BigNumber.make(3),
				tokens: {
					ARK: BigNumber.make(4),
					BTC: BigNumber.make(5),
					ETH: BigNumber.make(6),
				},
			},
		],
		[
			456,
			{
				available: BigNumber.make(1),
				fees: BigNumber.make(2),
				locked: BigNumber.make(3),
				lockedUnvotes: BigNumber.make(3),
				lockedVotes: BigNumber.make(3),
				tokens: {
					ARK: BigNumber.make(4),
					BTC: BigNumber.make(5),
					ETH: BigNumber.make(6),
				},
			},
		],
		[
			789,
			{
				available: Number.NaN,
				fees: Number.NaN,
			},
		],
		[111, undefined],
	];

	beforeAll(() => bootContainer());

	beforeEach(async (context) => {
		nock.fake()
			.get("/api/node/configuration")
			.reply(200, loader.json("test/fixtures/client/configuration.json"))
			.get("/api/peers")
			.reply(200, loader.json("test/fixtures/client/peers.json"))
			.get("/api/node/configuration/crypto")
			.reply(200, loader.json("test/fixtures/client/cryptoConfiguration.json"))
			.get("/api/node/syncing")
			.reply(200, loader.json("test/fixtures/client/syncing.json"))

			// default wallet
			.get("/api/wallets/D6i8P5N44rFto6M6RALyUXLLs7Q1A1WREW")
			.reply(200, loader.json("test/fixtures/client/wallet-non-resigned.json"))
			.get("/api/wallets/030fde54605c5d53436217a2849d276376d0b0f12c71219cd62b0a4539e1e75acd")
			.reply(200, loader.json("test/fixtures/client/wallet-non-resigned.json"))

			// second wallet
			.get("/api/wallets/DNc92FQmYu8G9Xvo6YqhPtRxYsUxdsUn9w")
			.reply(200, loader.json("test/fixtures/client/wallet-2.json"))
			.get("/api/wallets/022e04844a0f02b1df78dff2c7c4e3200137dfc1183dcee8fc2a411b00fd1877ce")
			.reply(200, loader.json("test/fixtures/client/wallet-2.json"))

			// Musig wallet
			.get("/api/wallets/DML7XEfePpj5qDFb1SbCWxLRhzdTDop7V1")
			.reply(200, loader.json("test/fixtures/client/wallet-musig.json"))
			.get("/api/wallets/02cec9caeb855e54b71e4d60c00889e78107f6136d1f664e5646ebcb2f62dae2c6")
			.reply(200, loader.json("test/fixtures/client/wallet-musig.json"))

			.get("/api/delegates")
			.reply(200, loader.json("test/fixtures/client/delegates-1.json"))
			.get("/api/delegates?page=2")
			.reply(200, loader.json("test/fixtures/client/delegates-2.json"))
			.get("/api/transactions/3e0b2e5ed00b34975abd6dee0ca5bd5560b5bd619b26cf6d8f70030408ec5be3")
			.query(true)
			.reply(200, () => {
				const response = loader.json("test/fixtures/client/transactions.json");
				return { data: response.data[0] };
			})
			.get("/api/transactions/bb9004fa874b534905f9eff201150f7f982622015f33e076c52f1e945ef184ed")
			.query(true)
			.reply(200, () => {
				const response = loader.json("test/fixtures/client/transactions.json");
				return { data: response.data[1] };
			})
			.get("/api/transactions")
			.query(true)
			.reply(200, loader.json("test/fixtures/client/transactions.json"))
			// CryptoCompare
			.get("/data/histoday")
			.query(true)
			.reply(200, loader.json("test/fixtures/markets/cryptocompare/historical.json"))
			.persist();

		const profileRepository = container.get(Identifiers.ProfileRepository);
		profileRepository.flush();
		context.profile = profileRepository.create("John Doe");

		context.subject = await context.profile.walletFactory().fromMnemonicWithBIP39({
			coin: "ARK",
			mnemonic: identity.mnemonic,
			network: "ark.devnet",
		});
	});

	each(
		"should turn into an object (%s)",
		({ context, dataset }) => {
			context.subject.coin().config().set("network.constants.slip44", dataset.slip44);
			context.subject.data().set("key", "value");

			context.subject.data().set(WalletData.Balance, dataset.balance);
			context.subject.data().set(WalletData.DerivationPath, "1");
			context.subject.data().set(WalletFlag.Starred, true);

			const actual = context.subject.toObject();

			assert.containKeys(actual, ["id", "data", "settings"]);
			assert.string(actual.id);
			assert.is(actual.data[WalletData.Address], "D6i8P5N44rFto6M6RALyUXLLs7Q1A1WREW");
			assert.is(actual.data[WalletData.Coin], "ARK");
			assert.is(actual.data[WalletData.Network], "ark.devnet");
			assert.is(
				actual.data[WalletData.PublicKey],
				"030fde54605c5d53436217a2849d276376d0b0f12c71219cd62b0a4539e1e75acd",
			);
			assert.object(actual.data);
			assert.object(actual.settings);
			assert.string(actual.settings.AVATAR);
		},
		datasets,
	);

	each("should turn into an object with initial state for partially restored wallet (%s)", ({ context, dataset }) => {
		context.subject.coin().config().set("network.constants.slip44", dataset.slip44);
		context.subject.data().set("key", "value");

		context.subject.data().set(WalletData.DerivationPath, "1");
		context.subject.data().set(WalletFlag.Starred, true);
		stub(context.subject, "hasBeenPartiallyRestored").returnValue(true);

		const actual = context.subject.toObject();

		assert.is(Object.keys(actual).length, 0);
	}, datasets);
});
