// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`111 should turn into an object 1`] = `
Object {
  "ADDRESS": "D6i8P5N44rFto6M6RALyUXLLs7Q1A1WREW",
  "BALANCE": Object {
    "available": "0",
    "fees": "0",
  },
  "BROADCASTED_TRANSACTIONS": Object {},
  "COIN": "ARK",
  "DERIVATION_PATH": "1",
  "DERIVATION_TYPE": "bip39",
  "ENCRYPTED_CONFIRM_KEY": undefined,
  "ENCRYPTED_SIGNING_KEY": undefined,
  "IMPORT_METHOD": "BIP39.MNEMONIC",
  "LEDGER_MODEL": undefined,
  "NETWORK": "ark.devnet",
  "PENDING_MULTISIGNATURE_TRANSACTIONS": Object {},
  "PUBLIC_KEY": "030fde54605c5d53436217a2849d276376d0b0f12c71219cd62b0a4539e1e75acd",
  "SEQUENCE": "111932",
  "SIGNED_TRANSACTIONS": Object {},
  "STARRED": true,
  "STATUS": "COLD",
  "VOTES": Array [],
  "VOTES_AVAILABLE": 0,
  "VOTES_USED": 0,
}
`;

exports[`123 should turn into an object 1`] = `
Object {
  "ADDRESS": "D6i8P5N44rFto6M6RALyUXLLs7Q1A1WREW",
  "BALANCE": Object {
    "available": "0",
    "fees": "0",
    "locked": "3",
    "lockedUnvotes": "3",
    "lockedVotes": "3",
    "tokens": Object {
      "ARK": "4",
      "BTC": "5",
      "ETH": "6",
    },
  },
  "BROADCASTED_TRANSACTIONS": Object {},
  "COIN": "ARK",
  "DERIVATION_PATH": "1",
  "DERIVATION_TYPE": "bip39",
  "ENCRYPTED_CONFIRM_KEY": undefined,
  "ENCRYPTED_SIGNING_KEY": undefined,
  "IMPORT_METHOD": "BIP39.MNEMONIC",
  "LEDGER_MODEL": undefined,
  "NETWORK": "ark.devnet",
  "PENDING_MULTISIGNATURE_TRANSACTIONS": Object {},
  "PUBLIC_KEY": "030fde54605c5d53436217a2849d276376d0b0f12c71219cd62b0a4539e1e75acd",
  "SEQUENCE": "111932",
  "SIGNED_TRANSACTIONS": Object {},
  "STARRED": true,
  "STATUS": "COLD",
  "VOTES": Array [],
  "VOTES_AVAILABLE": 0,
  "VOTES_USED": 0,
}
`;

exports[`456 should turn into an object 1`] = `
Object {
  "ADDRESS": "D6i8P5N44rFto6M6RALyUXLLs7Q1A1WREW",
  "BALANCE": Object {
    "available": "1",
    "fees": "2",
    "locked": "3",
    "lockedUnvotes": "3",
    "lockedVotes": "3",
    "tokens": Object {
      "ARK": "4",
      "BTC": "5",
      "ETH": "6",
    },
  },
  "BROADCASTED_TRANSACTIONS": Object {},
  "COIN": "ARK",
  "DERIVATION_PATH": "1",
  "DERIVATION_TYPE": "bip39",
  "ENCRYPTED_CONFIRM_KEY": undefined,
  "ENCRYPTED_SIGNING_KEY": undefined,
  "IMPORT_METHOD": "BIP39.MNEMONIC",
  "LEDGER_MODEL": undefined,
  "NETWORK": "ark.devnet",
  "PENDING_MULTISIGNATURE_TRANSACTIONS": Object {},
  "PUBLIC_KEY": "030fde54605c5d53436217a2849d276376d0b0f12c71219cd62b0a4539e1e75acd",
  "SEQUENCE": "111932",
  "SIGNED_TRANSACTIONS": Object {},
  "STARRED": true,
  "STATUS": "COLD",
  "VOTES": Array [],
  "VOTES_AVAILABLE": 0,
  "VOTES_USED": 0,
}
`;

exports[`789 should turn into an object 1`] = `
Object {
  "ADDRESS": "D6i8P5N44rFto6M6RALyUXLLs7Q1A1WREW",
  "BALANCE": Object {
    "available": "0",
    "fees": "0",
  },
  "BROADCASTED_TRANSACTIONS": Object {},
  "COIN": "ARK",
  "DERIVATION_PATH": "1",
  "DERIVATION_TYPE": "bip39",
  "ENCRYPTED_CONFIRM_KEY": undefined,
  "ENCRYPTED_SIGNING_KEY": undefined,
  "IMPORT_METHOD": "BIP39.MNEMONIC",
  "LEDGER_MODEL": undefined,
  "NETWORK": "ark.devnet",
  "PENDING_MULTISIGNATURE_TRANSACTIONS": Object {},
  "PUBLIC_KEY": "030fde54605c5d53436217a2849d276376d0b0f12c71219cd62b0a4539e1e75acd",
  "SEQUENCE": "111932",
  "SIGNED_TRANSACTIONS": Object {},
  "STARRED": true,
  "STATUS": "COLD",
  "VOTES": Array [],
  "VOTES_AVAILABLE": 0,
  "VOTES_USED": 0,
}
`;
